--- a/less/mixins.less
+++ b/less/mixins.less
@@ -14,7 +14,7 @@
 }
 
 .serif() {
-	font-family: 'PT Serif', 'Lora', 'Times New Roman', serif;
+	font-family: 'Merriweather', 'Lora', 'Times New Roman', serif;
 }
 
 .sans-serif () {
